Revert "fix(chip-group): rework spacing"
This reverts commit 26fa402149a9ceb09561bcf6e8f943555f38e096.

--- a/src/patternfly/components/ChipGroup/chip-group.scss
+++ b/src/patternfly/components/ChipGroup/chip-group.scss
@@ -1,16 +1,18 @@
 .pf-c-chip-group {
   @include pf-t-light; // force the container follow the light theme
 
+  // Chip group
+  --pf-c-chip-group--MarginBottom: calc(var(--pf-global--spacer--xs) * -1);
+
   // Category
-  --pf-c-chip-group--m-category--PaddingTop: calc(var(--pf-global--spacer--xs) / 2);
+  --pf-c-chip-group--m-category--PaddingTop: var(--pf-global--spacer--xs);
   --pf-c-chip-group--m-category--PaddingRight: var(--pf-global--spacer--xs);
-  --pf-c-chip-group--m-category--PaddingBottom: calc(var(--pf-global--spacer--xs) / 2);
+  --pf-c-chip-group--m-category--PaddingBottom: var(--pf-global--spacer--xs);
   --pf-c-chip-group--m-category--PaddingLeft: var(--pf-global--spacer--sm);
   --pf-c-chip-group--m-category--BorderRadius: var(--pf-global--BorderRadius--sm);
   --pf-c-chip-group--m-category--BackgroundColor: var(--pf-global--BackgroundColor--200);
 
   // Label in group
-  --pf-c-chip-group__label--PaddingTop: var(--pf-global--spacer--xs);
   --pf-c-chip-group__label--PaddingRight: var(--pf-global--spacer--sm);
   --pf-c-chip-group__label--PaddingBottom: var(--pf-global--spacer--xs);
   --pf-c-chip-group__label--FontSize: var(--pf-global--FontSize--sm);
@@ -21,8 +23,9 @@
 
   // Chip
   --pf-c-chip-group--c-chip--MarginRight: var(--pf-global--spacer--xs);
-  --pf-c-chip-group--c-chip--MarginTop: calc(var(--pf-global--spacer--xs) / 2);
-  --pf-c-chip-group--c-chip--MarginBottom: calc(var(--pf-global--spacer--xs) / 2);
+  --pf-c-chip-group--c-chip--MarginBottom: var(--pf-global--spacer--xs);
+
+  margin-bottom: var(--pf-c-chip-group--MarginBottom);
 
   &.pf-m-category {
     padding-top: var(--pf-c-chip-group--m-category--PaddingTop);
@@ -34,7 +37,6 @@
   }
 
   .pf-c-chip {
-    margin-top: var(--pf-c-chip-group--c-chip--MarginTop);
     margin-right: var(--pf-c-chip-group--c-chip--MarginRight);
     margin-bottom: var(--pf-c-chip-group--c-chip--MarginBottom);
 
@@ -59,7 +61,6 @@
   @include pf-text-overflow;
 
   max-width: var(--pf-c-chip-group__label--Maxwidth);
-  padding-top: var(--pf-c-chip-group__label--PaddingTop);
   padding-right: var(--pf-c-chip-group__label--PaddingRight);
   padding-bottom: var(--pf-c-chip-group__label--PaddingBottom);
   font-size: var(--pf-c-chip-group__label--FontSize);
